[project]
name="quantool"
version = "0.2.0"                             # Project version
description = "A unified, plugin-based quantization toolkit for LLMs"
readme = "README.md"                          # Path to long-form project description
requires-python = ">=3.8,<3.12"              # Minimum Python support
authors = [
    { name="Quantool Team", email="igor.kuzmin@bsc.es" }
]
#license = { file="LICENSE" }                 # Path to license file
keywords = [
    "quantization",
    "llm",
    "plugin",
    "toolkit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "torch>=2.7,<2.8",
    "transformers==4.56.2",
    "tokenizers==0.22.1",
    "huggingface_hub>=0.35,<0.37",
    "accelerate==1.10.1",
    "mistral_common==1.8.5",
    "datasets>=4.0.0,<=4.1.1",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "pandas>=2.3.0",
    "loguru==0.7.3",
    "peft>=0.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
]
llama-cpp = [
  "llama-cpp-scripts @ git+https://github.com/ggml-org/llama.cpp.git@master#egg=llama-cpp-scripts",
]
llm-compressor = [
  "llmcompressor>=0.8.1",
]


[project.scripts]
quantool="quantool.entrypoints.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantool*"]
